--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,3 +1,9 @@
 {
-  "hosting": {}
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2021-04-24T21:25:26.746Z"
+    }
+  }
 }
