--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^3.3.27",
     "react": "^17.0.2",
+    "react-countdown-clock-timer": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-json-to-table": "^0.1.7",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
