--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^3.3.27",
+    "html-react-parser": "^1.2.6",
     "react": "^17.0.2",
     "react-countdown-clock-timer": "^2.1.2",
     "react-dom": "^17.0.2",
